# falconfs

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  build.sh
.github/: CODEOWNERS
.github/workflows/: build.yml  install_dependencies.sh  run_test.sh  smoke_test.sh
cloud_native/: README.md
cloud_native/deployment_script/: cn.yaml  configmap.yaml  dn.yaml  node.json  prepare.sh  store.yaml
cloud_native/docker_build/: Dockerfile.cn  Dockerfile.dn  Dockerfile.regress  Dockerfile.store  clean.sh  docker_build.sh  dockerbuild-dockerfile-ubuntu24.04
cloud_native/falcon_cm/: falcon_cm_cn.py  falcon_cm_dn.py
config/: config.json
deb/: README.source.md  install-third-party-ubuntu24.04.sh
debian/: changelog  control  copyright  falconfs-release.install  falconfs-release.postinst  falconfs.install  falconfs.postinst  falconfs.preinst  rules
deploy/: falcon_env.sh  falcon_start.sh
deploy/ansible/: falcontest.yml  install-ubuntu24.04.sh
deploy/client/: falcon_client_config.sh  falcon_client_start.sh  falcon_client_stop.sh
deploy/coverage/: coverage_common.sh  coverage_local_service.sh  coverage_report.sh
deploy/meta/: falcon_meta_config.sh  falcon_meta_start.sh  falcon_meta_stop.sh  postgresql.conf.template
docker/: README.md  build_falcon_docker.sh  openEuler24.03-dev-dockerfile  openEuler24.03-release-runtime-dockerfile  ubuntu22.04-dev-dockerfile  ubuntu22.04-dockerfile  ubuntu24.04-base-builder-dockerfile  ubuntu24.04-cn-dockerfile  ubuntu24.04-dev-dockerfile  ubuntu24.04-dn-dockerfile  ubuntu24.04-full-runtime-dockerfile  ubuntu24.04-release-runtime-dockerfile  ubuntu24.04-store-dockerfile
docker/rpms/: README.md
docs/: debug.md  design.md  setup.md
falcon/: Makefile  MakefilePlugin.brpc  MakefilePlugin.hcom  falcon--1.0.sql  falcon_init.c
falcon/brpc_comm_adapter/: brpc_meta_service_job.cpp  falcon_brpc_server.cpp
falcon/connection_pool/: brpc_server.cpp  connection_pool.c  falcon_connection_pool.c  falcon_meta_service.cpp  falcon_worker_task.cpp  pg_connection.cpp  pg_connection_pool.cpp
falcon/control/: control_func.c  meta_expiration.c
falcon/dir_path_shmem/: dir_path_hash.c
falcon/distributed_backend/: distributed_backend_falcon.c  remote_comm_falcon.c
falcon/hcom_comm_adapter/: falcon_meta_service.cpp  falcon_meta_service_job.cpp  hcom_meta_service.cpp  hcom_meta_service_job.cpp
falcon/metadb/: directory_table.c  foreign_server.c  kv_meta_handle.c  kvsliceid_table.c  meta_batch_interface.c  meta_handle.c  meta_handle_helper.c  meta_plain_interface.c  meta_serialize_interface.c  meta_serialize_interface_helper.cpp  shard_table.c
falcon_client/: CMakeLists.txt  fuse_main.cpp
falcon_client/src/: CMakeLists.txt  bio_c.cpp  connection.cpp  falcon_kv_meta.cpp  falcon_kv_meta_mock.cpp  falcon_kv_server.cpp  falcon_meta.cpp  falcon_slice_id.cpp  falcon_slice_meta.cpp  kv_client_operation.cpp  kv_ipc_client.cpp  kv_ipc_server.cpp  kv_meta.cpp  kv_service_operation.cpp  kv_utils.cpp  memory_pool.cpp  resource_pool.cpp  router.cpp  slice_key_gen.cpp
falcon_client/src/include/: connection.h  falcon_kv_meta.h  falcon_kv_server.h  falcon_meta.h  falcon_router.h  falcon_slice_id.h  falcon_slice_meta.h  kv_client_operation.h  kv_ipc_client.h  kv_ipc_message.h  kv_ipc_server.h  kv_meta.h  kv_service_operation.h  kv_utils.h  memory_pool.h  resource_pool.h  router.h  slice_key_gen.h
falcon_client/src/mock_include/: bio_c.h  falcon_kv_meta_mock.h
falcon_client/test/: CMakeLists.txt  test_kvserver.cpp  test_slice_key_gen.cpp
falcon_store/: CMakeLists.txt
python_interface/: README.md  setup.py
rpm/: README.md  README.source.md  falconfs.source.spec
tests/: CMakeLists.txt
tests/chaos/: README.md  chaos_case_matrix_default.txt  chaos_lib.sh  chaos_run.sh  chaos_suite.sh  longrun_config.sh  run_longrun.sh
tests/chaos/lib/: actions.sh  data_dirs.sh  diagnostics.sh  infra_health.sh  recovery_report.sh  runtime.sh
tests/chaos/plans/: dual_all.txt  single_all.txt
tests/common/: CMakeLists.txt  test_common_coverage.cpp  test_falcon_cm.cpp  test_falcon_cm.h
tests/falcon/: CMakeLists.txt  test_comm_plugin_coverage.c  test_connection_pool_coverage.cpp  test_control_func_coverage.c  test_control_hook_flag_coverage.c  test_dir_path_hash_coverage.c  test_distributed_backend_coverage.c  test_error_code_coverage.cpp  test_falcon_connection_pool_c_coverage.cpp  test_hcom_meta_service_interface_coverage.cpp  test_perf_counter_coverage.cpp  test_pg_connection_coverage.cpp  test_remote_comm_coverage.c  test_transaction_cleanup_coverage.c  test_transaction_coverage.c
tests/falcon/metadb/: CMakeLists.txt  test_metadb_coverage_common.cpp  test_metadb_coverage_common.h  test_metadb_dfs_flows_ut.cpp  test_metadb_helper_ut.cpp  test_metadb_sql_serialized_ut.cpp
tests/falcon_client/: CMakeLists.txt  test_falcon_client_coverage.cpp  test_fuse_main_mock.cpp
tests/falcon_meta_service_plugin/: CMakeLists.txt  falcon_meta_service_test_plugin.cpp
tests/falcon_plugin/: CMakeLists.txt  test_plugin_background_fail.c  test_plugin_framework.h  test_plugin_inline_fail.c  test_plugin_loader.cpp  test_plugin_loader_coverage.cpp
tests/falcon_store/: CMakeLists.txt  test_disk_cache.cpp  test_disk_cache.h  test_falcon_store.cpp  test_falcon_store.h  test_file_lock.cpp  test_node.cpp  test_node.h  test_read_stream.cpp  test_write_stream_coverage.cpp
tests/metadata_ut/: CMakeLists.txt  metadata_ut_client.cpp  metadata_ut_client.h  run_metadata_ut.sh  test_metadata_ut.cpp
tests/private-directory-test/: CMakeLists.txt  DBarrier.h  README.md  baseline_report.py  dfs.h  falconfs.cc  local-run.sh  local_run_workload_test_common.h  main.cc  posix.cc  run_daily_baseline.sh  test_local_run_posix_workload_ut.cpp  test_local_run_workload_ut.cpp  workloads.cc
tests/python_interface/: test_pyfalconfs_internal.py
tests/regress/: README.md  chaos_run.sh  chaos_suite.sh  docker-compose-dual.yaml  docker-compose-release-openeuler.yaml  docker-compose-release-ubuntu.yaml  docker-compose-single.yaml  docker-compose-triple.yaml  start_regress_test.sh
(+138 files in other folders)
