if(BUILD_TEST OR BUILD_PRIVATE_TEST)
    add_subdirectory(private-directory-test)
endif()

if(BUILD_TEST)
    add_subdirectory(falcon_store)
    add_subdirectory(common)
    add_subdirectory(falcon)
    add_subdirectory(falcon_client)
    add_subdirectory(falcon_plugin)
    add_subdirectory(falcon_meta_service_plugin)
endif()
